[package]
name = "cli-tool-wget-clone"
version = "0.2.0"
authors = ["Siddharth Khonde <siddharthk435@gmail.com>"]
description = "A minimal file downloader"
documentation = "https://github.com/siddharthkhonde/cli-tool-wget-clone/"
homepage = "https://github.com/siddharthkhonde/cli-tool-wget-clone/"
repository = "https://github.com/siddharthkhonde/cli-tool-wget-clone/"
readme = "README.md"
keywords = ["http", "client", "cli", "file", "download"]
categories = ["web-programming::http-client", "command-line-utilities", "network-programming"]
license = "MIT"
edition = "2018"

[dependencies]
indicatif = "0.15.0"
console = "0.13.0"
clap = "2.33.2"
ftp = "3.0.1"
threadpool = "1.8.1"
failure = { version = "0.1.8", features = [] }
url = "1.7.2"
reqwest = {version = "0.10.8", features = ["blocking"]}

[dev-dependencies]
assert_cmd = "0.11"
tiny_http = "0.6.2"
assert_fs = "0.11"
predicates = "1.0"
